--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "website",
   "version": "0.0.0",
+  "license": "GPL-3.0-or-later",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
